--- a/index.html
+++ b/index.html
@@ -20,6 +20,21 @@
         <p class="message">Задач нет. Отдыхай!</p>
     </div>
 
+    <!-- <div class="task-card">
+        <label class="custom-checkbox">
+            <input type="checkbox">
+            <span class="checkmark"></span>
+        </label>
+        <p class="task">Завоевать пояс UFC</p>
+        <button class="edit-btn">
+            <img src="./Vector.png" alt="edit" class="edit-img">
+        </button>
+        <button class="delete-btn">
+            <span class="line1"></span>
+            <span class="line2"></span>
+        </button>
+    </div> -->
+
     <script src="./script.js"></script>
 </body>
 </html>
