--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo</title>
-    <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" href="./img/ok.svg">
 </head>
 <body>
 
@@ -27,13 +28,15 @@
         </label>
         <p class="task">Завоевать пояс UFC</p>
         <button class="edit-btn">
-            <img src="./Vector.png" alt="edit" class="edit-img">
+            <img src="./img/Vector.png" alt="edit" class="edit-img">
         </button>
         <button class="delete-btn">
             <span class="line1"></span>
             <span class="line2"></span>
         </button>
     </div> -->
+
+    <!-- <input type="text" value="" class="edit-input"> -->
 
     <script src="./script.js"></script>
 </body>
